--- a/src/scss/variables/_palette.scss
+++ b/src/scss/variables/_palette.scss
@@ -6,6 +6,8 @@ $white: #ffffff;
 
 $black: #000000;
 
+$grey: #F7F7F7;
+
 $ribbon: #EE0C3E;
 
 $radiance: #0086FF;
